2011-02-05  Ben Abbott  <bpabbott@mac.com>

	* plot/legend.m: Add demo for inline keys created by two plot commands.

2011-02-05  David Bateman  <dbateman@free.fr>

	Bug #32022 and #32343.

	* plot/legend.m (updatelegend): Don't flip plots when resetting the
	legend. Use unwind_protect to ensure that the resursive flag is reset
	in case of an error.
	(getlegenddata): Remove this function and replace its use with the
	function __getlegenddata__.
	* plot/privata/__getlegenddata__.m: New function
	* plot/module.mk (plot_PRIVATE_FCN_FILES): Add it here.
	* plot/private/__plt__.m: Set initial values of hlgnd and tlgnd
	if a legend exists already.

2010-02-02  Rik  <octave@nomad.inbox5.com>

	* sparse/svds.m: Use testif to only run some sparse tests when
	necessary libraries are installed.

2011-02-01  Ben Abbott  <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Don't throw an error if gnuplot
	isn't installed.

2011-02-01  John W. Eaton  <jwe@octave.org>

	* plot/scatter3.m: Pass h to set, not ax.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* plot/private/__axis_label__.m: Don't call __fltk_redraw__.

2011-01-31  John W. Eaton  <jwe@octave.org>

	* plot/__fltk_ginput__.m: Remove line that should have been
	removed in previous change.

2010-01-31  Rik  <octave@nomad.inbox5.com>

	* plot/private/__gnuplot_has_terminal__.m: Simplify regular expression
	to eliminate word-boundary assertion.

2010-01-30  Rik  <octave@nomad.inbox5.com>

	* deprecated/module.mk, optimization/module.mk: Deprecate glpkmex
	function.

2011-01-30  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_drawnow__.m: Rename from gnuplot_drawnow.m
	Update doc string and error message with new name.
	* plot/module.mk (plot_FCN_FILES): Update list.

2011-01-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* plot/__fltk_ginput__.m (ginput_aggregator): New arg, button.
	Change all uses.
	(ginput_keypressfcn): Save keypress info.

2010-01-29  Rik  <octave@nomad.inbox5.com>
