@@ -1,3 +1,8 @@
+2010-02-05  Rik  <octave@nomad.inbox5.com>
+
+	* help/help.m, linear-algebra/onenormest.m, plot/graphics_toolkit.m,
+	plot/pie3.m, plot/view.m, signal/periodogram.m: Grammarcheck docstrings.
+
 2011-02-05  Ben Abbott  <bpabbott@mac.com>
 
 	* plot/legend.m: Add demo for inline keys created by two plot commands.
